# finance_analysis

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  TODO.md  create_database.py  data_insertion.py  finance_news.db  finance_news_results.json  nyse_tickers.txt  package-lock.json  pyproject.toml  setup.py  test_api.py
.cursor/rules/: python-rule.mdc
agent/: finance_news_agent.py
site/: package-lock.json  package.json  pnpm-lock.yaml
site/src/app/: globals.css  layout.tsx  page.tsx
src/: api_fetch_macd.py  api_fetch_prices.py  api_fetch_rsi.py  combined_signals.py  create_database.py  data_insertion.py  db_util.py  hello.py  macd.py  obv.py  options_analysis.py  options_analysis_TODO.md  retry_utils.py  rsi.py  technical_graphs.py  timeseries_run.py  two_gauss.py
src/agent/: analyze_ticker_history.py  create_news_database.py  finance_agent_run.py  finance_news_agent.py  finhub_util.py  news_db.py
src/backtesting/: backtest_strategy.py  portfolio.py  strategy.py
src/backtesting/risk_management/: position_sizing.py  stop_loss_manager.py
src/backtesting/strategies/: Strategies_TODO.md  backtest_data_preparer.py  df_columns.py  macd_strategy.py  mean_reversion_strategy.py  obv_divergence_strategy.py  rsi_macd_strategy.py  rsi_macd_volatility_strategy.py  rsi_strategy.py  stochastic_mean_reversion_strategy.py  strategy_factory.py
src/common/: data_requirements.py  df_columns.py  ohlc.py  tz_util.py
src/notebooks/: sample.ipynb
src/options/: implied_volatility.py  open_interest.py  options_analysis.md  put_call.py  unusual_activity.py
src/signals/: base_signal.py  example_usage.py  macd.py  macd_signal.py  obv_signal.py  rsi_signal.py  signal_factory.py  timeseries_signal.py
src/signals/documentation/: macd.md  obv.md  rsi.md
src/simulations/: backtest_instances.py  run_simulation.py  simulation_config.py  ticker_handler.py
tests/backtesting/: test_portfolio.py
tests/signals/: test_signal_factory.py
tests/simulations/: test_simulation_config.py
(+17 files in other folders)
